--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "osmon_vm"
+name = "bulut"
 version = "0.2.0"
 edition = "2018"
 authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
