--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ homepage = "https://osmon.dev"
 documentation = "https://wiki.osmon.dev"
 repository = "https://github.com/osmon-lang/osmon/"
 description = "A programming language for Uzbeks"
-authors = ["UwUssimo Robinson <uwussimo@icloud.com>"]
+authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
 keywords = ["programming language", "interpreter", "uzbek"]
 readme = "readme.md"
 categories = ["language"]
