--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ documentation = "https://wiki.osmon.dev"
 repository = "https://github.com/osmon-lang/osmon/"
 description = "A programming language for Uzbeks"
 authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
-keywords = ["programming language", "interpreter", "uzbek"]
+keywords = ["programming-language", "interpreter", "uzbek"]
 readme = "readme.md"
 categories = ["language"]
 license = "Apache-2.0"
