--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ description = "A programming language for Uzbeks"
 authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
 keywords = ["programming-language", "interpreter", "uzbek"]
 readme = "readme.md"
-categories = ["language"]
+categories = ["localization"]
 license = "Apache-2.0"
 build = "build.rs"
 exclude = ["target", ".github"]
