--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ winapi = { version = "=0.3.9", features = ["knownfolders", "mswsock", "objbase",
 [dependencies]
 bulut = "0.3.0"
 time = "0.1.40"
-structopt = "0.2.13"
+clap = { version = "3.1.17", features = ["derive"] }
 float_duration = "0.3.3"
 
 [package.metadata.winres]
