--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: 💬 GitHub Discussions
-    url: https://github.com/mad-maids/maid.discussion/discussions
+    url: https://github.com/uwussimo/osmon/discussions
     about: Ask questions and post ideas
   - name: 💭 Discord Server
-    url: https://discord.gg/mKKekABEzx
+    url: https://discord.gg/uwussimo
     about: Ask casual questions here
