centralizing all actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,13 @@
 # Once you push this code to a repo on GitHub, Dependabot will automatically start sending PRs to keep your dependencies up-to-date!
 version: 2
+
 updates:
   - package-ecosystem: "npm"
-    directory: "/"
+    directory: "/website"
     schedule:
       interval: "daily"
+
+  - package-ecosystem: 'npm'
+    directory: '/script'
+    schedule:
+      interval: 'daily'
