--- a/.github/workflows/shell.yaml
+++ b/.github/workflows/shell.yaml
@@ -1,4 +1,4 @@
-name: ci
+name: Test [Shell Scripts]
 
 on: [push, pull_request]
 
@@ -10,6 +10,11 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
+    defaults:
+      run:
+        working-directory: ./install
+
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -18,6 +23,7 @@ jobs:
         if: matrix.os == 'macOS-latest'
         run: |
           brew install shfmt shellcheck
+          cd install
           shfmt -d .
           shellcheck -s sh *.sh
       - name: tests shell
