--- a/website/package.json
+++ b/website/package.json
@@ -8,7 +8,7 @@
     "uzbek"
   ],
   "homepage": "https://osmon.dev",
-  "repository": "https://github.com/osmon-lang/osmon-web",
+  "repository": "https://github.com/uwussimo/osmon",
   "author": "UwUssimo Robinson",
   "license": "MIT",
   "scripts": {
@@ -32,13 +32,13 @@
     "gsap": "./src/lib/gsap/gsap-bonus.tgz",
     "locomotive-scroll": "^4.1.1",
     "lodash.throttle": "^4.1.1",
-    "next": "^12.1.4",
+    "next": "^13.0.5",
     "next-seo": "^5.3.0",
     "next-svgr": "^0.0.2",
     "p2": "^0.7.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-device-detect": "^2.1.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.2.1",
     "react-hot-toast": "^2.2.0",
     "react-intersection-observer": "^8.32.1",
@@ -62,24 +62,23 @@
     "babel-jest": "^27.0.6",
     "babel-plugin-optimize-clsx": "^2.6.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.12.0",
-    "eslint-config-next": "^12.1.4",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint": "^8.28.0",
+    "eslint-config-next": "^13.0.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^11.1.2",
     "next-compose-plugins": "^2.2.1",
     "next-sitemap": "^1.6.162",
     "next-transpile-modules": "^9.0.0",
-    "prettier": "^2.3.2",
+    "prettier": "^2.8.0",
     "sass": "^1.38.0",
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^22.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.9.3"
   },
   "browserslist": [
     ">0.2%",
