--- a/website/package.json
+++ b/website/package.json
@@ -45,7 +45,7 @@
     "react-merge-refs": "^1.1.0",
     "react-query": "^3.27.0",
     "react-use-measure": "^2.1.1",
-    "sharp": "^0.30.3"
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^11.1.0",
@@ -59,17 +59,13 @@
     "@types/react-dom": "^17.0.6",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^4.29.2",
-    "babel-jest": "^27.0.6",
-    "babel-plugin-optimize-clsx": "^2.6.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.28.0",
     "eslint-config-next": "^13.0.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.3.1",
     "lint-staged": "^11.1.2",
     "next-compose-plugins": "^2.2.1",
     "next-sitemap": "^1.6.162",
@@ -77,8 +73,7 @@
     "prettier": "^2.8.0",
     "sass": "^1.38.0",
     "stylelint": "^14.6.1",
-    "stylelint-config-standard": "^22.0.0",
-    "typescript": "^4.9.3"
+    "stylelint-config-standard": "^22.0.0"
   },
   "browserslist": [
     ">0.2%",
@@ -95,16 +90,8 @@
     "trailingComma": "none"
   },
   "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "react",
-      "react-hooks",
-      "@typescript-eslint"
-    ],
     "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended",
+      "next",
       "prettier",
       "plugin:prettier/recommended"
     ],
@@ -117,14 +104,6 @@
       "react/react-in-jsx-scope": 0,
       "react/display-name": 0,
       "react/prop-types": 0,
-      "@typescript-eslint/explicit-function-return-type": 0,
-      "@typescript-eslint/explicit-member-accessibility": 0,
-      "@typescript-eslint/indent": 0,
-      "@typescript-eslint/member-delimiter-style": 0,
-      "@typescript-eslint/no-explicit-any": 0,
-      "@typescript-eslint/no-var-requires": 0,
-      "@typescript-eslint/no-use-before-define": 0,
-      "@typescript-eslint/ban-ts-comment": 0,
       "react-hooks/exhaustive-deps": "warn",
       "react/no-unescaped-entities": 0,
       "curly": [
@@ -135,12 +114,6 @@
         2,
         {
           "allowReferrer": true
-        }
-      ],
-      "@typescript-eslint/no-unused-vars": [
-        2,
-        {
-          "argsIgnorePattern": "^_"
         }
       ],
       "no-console": [
@@ -154,8 +127,7 @@
       ],
       "prettier/prettier": [
         "warn"
-      ],
-      "@typescript-eslint/explicit-module-boundary-types": "off"
+      ]
     },
     "settings": {
       "react": {
