[FIX] (shell|web) fixing ci link to install

--- a/.github/workflows/shell.yaml
+++ b/.github/workflows/shell.yaml
@@ -12,7 +12,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./install
+        working-directory: ./website/public/install
 
 
     steps:
