--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,12 +17,14 @@
     "clsx": "1.2.1",
     "date-fns": "2.29.3",
     "dinero.js": "2.0.0-alpha.8",
-    "lib": "workspace:*",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
+    "lib": "workspace:*",
     "next": "13.0.0",
+    "postcss": "8.4.19",
     "react": "^18.2.0",
     "styled-components": "6.0.0-beta.2",
+    "tailwindcss": "3.2.4",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.2",
     "use-count-up": "^3.0.1"
