updating lock registries + adding havo workspace

--- a/bulut/Cargo.toml
+++ b/bulut/Cargo.toml
@@ -3,8 +3,8 @@ name = "bulut"
 version = "0.3.0"
 edition = "2018"
 homepage = "https://osmon.dev"
-documentation = "https://wiki.osmon.dev/bulut"
-repository = "https://github.com/osmon-lang/osmon-vm"
+documentation = "https://wiki.osmon.dev"
+repository = "https://github.com/uwussimo/osmon"
 description = "Lightweight and fast Virtual Machine built for Osmon Programming Language"
 authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
 readme = "readme.md"
