--- a/havo/Cargo.toml
+++ b/havo/Cargo.toml
@@ -1,8 +1,25 @@
 [package]
-name = "havo"
+name = "jazz"
 version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2018"
+homepage = "https://osmon.dev"
+documentation = "https://wiki.osmon.dev"
+repository = "https://github.com/uwussimo/osmon"
+description = "Static compiler built for Osmon Programming Language"
+authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
+readme = "readme.md"
+keywords = ["compiler", "uzbek", "osmon"]
+license = "Apache-2.0"
+exclude = ["target"]
 
 [dependencies]
+parking_lot = "0.8"
+lazy_static = "1.3"
+colored = "1.8"
+structopt = "0.2"
+clap = "2.33"
+linked-hash-map = "0.5"
+
+[dev-dependencies]
+lang_tester = {git = "https://github.com/softdevteam/lang_tester"}
+tempdir = "0.3"
