--- a/osmon/Cargo.toml
+++ b/osmon/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.0"
 edition = "2018"
 homepage = "https://osmon.dev"
 documentation = "https://wiki.osmon.dev"
-repository = "https://github.com/osmon-lang/osmon/"
+repository = "https://github.com/uwussimo/osmon"
 description = "A programming language for Uzbeks"
 authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
 keywords = ["programming-language", "interpreter", "uzbek"]
