--- a/.github/workflows/turbo.yaml
+++ b/.github/workflows/turbo.yaml
@@ -7,8 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Setting up Node.js with pnpm
       - uses: pnpm/action-setup@646cdf48217256a3d0b80361c5a50727664284f2
         with:
           version: 6.10.0
@@ -18,7 +16,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-      - run: pnpm install
+        run: pnpm install
 
       - name: Lint
         run: pnpm lint
