--- a/.github/workflows/havo.yaml
+++ b/.github/workflows/havo.yaml
@@ -18,7 +18,7 @@ jobs:
         run: sudo apt install libgccjit-9-dev
 
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --release --verbose
 
 #      - name: Run lint
 #        run: cargo clippy --verbose
