[FIX] (havo) changing ci directory on comptime

--- a/.github/workflows/havo.yaml
+++ b/.github/workflows/havo.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./osmon
+        working-directory: ./havo
     steps:
       - uses: actions/checkout@v3
 
