--- a/.github/workflows/havo.yaml
+++ b/.github/workflows/havo.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install required libs
-        run: sudo apt install libgccjit-12-dev
+        run: sudo apt-get install -y libgccjit-12-dev
 
       - name: Build
         run: cargo build --release --verbose
