--- a/.github/workflows/havo.yaml
+++ b/.github/workflows/havo.yaml
@@ -7,12 +7,15 @@ env:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: macos-12
     defaults:
       run:
         working-directory: ./havo
     steps:
       - uses: actions/checkout@v3
+
+      - name: Install required libs
+        run: brew install gcc libgccjit llvm clang
 
       - name: Build
         run: cargo build --release --verbose
