--- a/.github/workflows/havo.yaml
+++ b/.github/workflows/havo.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install required libs
-        run: brew install gcc libgccjit llvm clang
+        run: brew install gcc libgccjit llvm
 
       - name: Build
         run: cargo build --release --verbose
