--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "osmon"
 version = "0.5.0"
-edition = "2018"
+edition = "2021"
 homepage = "https://osmon.dev"
 documentation = "https://wiki.osmon.dev"
-repository = "https://github.com/uwussimo/osmon"
+repository = "https://github.com/osmon-lang/osmon"
 description = "A programming language for Uzbeks"
 authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
 keywords = ["programming-language", "interpreter", "uzbek"]
