--- a/.github/workflows/osmon.yaml
+++ b/.github/workflows/osmon.yaml
@@ -12,6 +12,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install required libs (gcc, llvm, clang, libgccjit)
+        run: sudo apt-get install build-essential llvm clang libgccjit-12-dev
+
+      - name: Include libgccjit library and header files
+        run: |
+            sudo ln -s /usr/lib/gcc/x86_64-linux-gnu/12/libgccjit.so /usr/lib/libgccjit.so
+            sudo ln -s /usr/lib/gcc/x86_64-linux-gnu/12/include/libgccjit.h /usr/include/libgccjit.h
+            sudo ln -s /usr/lib/gcc/x86_64-linux-gnu/12/include/libgccjit++.h /usr/include/libgccjit++.h
+
+      - name: Change rust channel
+        run: rustup default nightly
+
       - name: Build
         run: cargo build --release --verbose
 
