--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,22 +36,10 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install llvm gcc libgccjit cmake autoconf automake
-
-          # Checking library path
-          echo $LIBRARY_PATH
-
-          # Checking compiler path
-          echo $CPATH
-
-          # Checking path
-          echo $PATH
-
           export PATH="$(brew --prefix)/opt/llvm/bin:$PATH"
           export CPATH="$(brew --prefix)/include"
-          export LDFLAGS="-L$(brew --prefix)/lib"
-          export CPPFLAGS="-I$(brew --prefix)/include"
-          export LIBRARY_PATH="$(brew --prefix)/lib:$LIBRARY_PATH"
-          export LIBRARY_PATH="$LIBRARY_PATH:$(brew --prefix)/lib/gcc/current"
+          export LD_LIBRARY_PATH="$(brew --prefix libgccjit)/lib"
+          export LIBRARY_PATH=$(brew --prefix libgccjit)/lib:$LIBRARY_PATH
 
       - name: Set complete profile
         run: rustup set profile complete
