--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,6 +44,9 @@ jobs:
           export LD_LIBRARY_PATH="$(brew --prefix libgccjit)/lib/gcc/current"
           export LIBRARY_PATH="$(brew --prefix libgccjit)/lib/gcc/current:$LIBRARY_PATH"
 
+      - name: Check global links
+        run: ls -la "$(brew --prefix)/lib" | grep gccjit
+
       - name: Set complete profile
         run: rustup set profile complete
 
