--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,18 +48,21 @@ jobs:
 
       - name: Install required libraries (MacOS)
         if: matrix.os == 'macos-latest'
+        run: brew install llvm gcc libgccjit cmake autoconf automake
+
+      - name: Link libgccjit at global path
+        if: matrix.os == 'macos-latest'
         run: |
-          brew install llvm gcc libgccjit cmake autoconf automake
+          ln -s "$(brew --prefix)/lib/gcc/current/libgccjit.0.dylib" "$(brew --prefix)/lib/libgccjit.0.dylib"
+          ln -s "$(brew --prefix)/lib/gcc/current/libgccjit.dylib" "$(brew --prefix)/lib/libgccjit.dylib"
+
+      - name: Export required PATHes
+        if: matrix.os == 'macos-latest'
+        run: |
           export PATH="$(brew --prefix)/opt/llvm/bin:$PATH"
           export CPATH="$(brew --prefix)/include"
           export LIBRARY_PATH="$(brew --prefix)/lib"
           export LIBRARY_PATH="$LIBRARY_PATH:$(brew --prefix)/lib/gcc/current"
-
-      - name: List action files
-        if: matrix.os == 'macos-latest'
-        run: | 
-          ls -la "$(brew --prefix gcc)/lib/gcc/current/"
-          ls -la "$(brew --prefix gcc)/lib/gcc/current/"
 
       - name: Set complete profile
         run: rustup set profile complete
